[tool.poetry]
name = "acuitypy"
version = "0.1.0"
description = "The Acuity Python package"
authors = ["Mysa Day Spa <info@mysadayspa.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
idna = "3.10"
requests = "2.32.3"
urllib3 = "2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
